2003-05-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (_show_ifp): Display the IPv6 flag
	information.

2003-05-04  Gary Thomas  <gary@mlbassoc.com>

	* src/ecos/support.c: 
	* cdl/freebsd_net.cdl: Add option to force initialization [debug]
	messages to go to a serial console.  This seems to be necessary
	on some hardware as the init sequence can totally foul up a
	network [debug] connection.

2003-04-28  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (cyg_net_malloc): Honour the flag M_ZERO,
	otherwise we end up with junk where we don't want it.

2003-04-11  Michael Checky  <Michael_Checky@Thermoking.com>

	* cdl/freebsd_net.cdl: Deleted the 
	'CYGPKG_NET_FREEBSD_STACK_BUILD_TESTS'
	component because these tests are in the net.cdl component
	'CYGPKG_NET_BUILD_TESTS' and selecting this option in freebsd_net.cdl
	causes build errors.

2003-04-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (_show_ifp): Now understands IPv6 
	addresses and network masks and added a few more flags
	* src/sys/net/route.c (rt_reinit_rtdelete): Only delete IPv4
	routes so that DHCP and BOOTP works and leave IPv6 routes so IPv6
	also keeps working.

2003-03-14  Nick Garnett  <nickg@balti.calivar.com>

	* src/ecos/support.c: Added function cyg_net_show_mbufs() and code
	in cyg_net_mbuf_alloc() to accumulate and optionally display
	information about the current set of mbufs. This is mostly a
	debugging feature and is disabled by default.

	* include/sys/mbuf.h: Added prototype for cyg_net_show_mbufs().

2003-03-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/net/if.c (if_attach): Removed printf which causes the
	ethernet device to become corrupt. At this point the app driver
	has started but not completed taking over from the redboot
	driver. It is unsafe for redboot to use the ethernet device.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/freebsd_net.cdl: Fix doc link.

2003-02-18  Jonathan Larmour  <jifl@eCosCentric.com>
